<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nodo_pruebas</name>
  <version>0.0.0</version>
  <description>Assignment 1: Autonomous Robots</description>
  <maintainer email="eliotrianar95@gmail.com">Elio</maintainer>
  <license>License: Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>os</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pandas</depend>
  <depend>geometry_msgs</depend>
  <depend>json</depend>
  <depend>sklearn</depend>
  <depend>scipy</depend>
  <depend>math</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
